assets/dark.css
/* ... */
.dark .field__label, .dark .customer .field label, .dark .addresses label {
  color: #999;
}

.stuck .logo, .sticky .logo {
  background-image: url(logo_symbol.svg);
  top: 8px;
}

.dark .tanBG, .dark .mega-nav, .dark .compare-panel, .dark .greyBG, .dark .photo-headerBG, .dark .build-panel,
.dark .nav-full-cart, .dark .yc-col-checkout, .dark .qty-change, .dark .health-benefit, .dark .event-box { 
  background-color: #2A2727; 
}

.dark .util-nav-link, .dark .nav-link, .dark .nav-right, .dark .centered-text, .dark .bold-link, .dark .tcw-text, .dark h2, .dark .rc-box,
.dark .shop-nav-head, .dark .sf-link, .dark .nav-arrow-link, .dark .nav-learn-article, .dark .nav-learn-blog, .dark .fr-text,
.dark .rcat-link, .dark .review-cta, .dark .pr-text, .dark .trial-col, .dark .sbs-text, .dark .compare-panel,
.dark .product-tiles, .dark .pt-name, .dark .col p, .dark .three-col-text, .dark .build-panel, .dark .pc-summary, .dark .pc-summary a,
.dark .product-category span, .dark .product-text, .dark .product-text h1, .dark .product-name-mobile,
.dark .pid-col-text, .dark .product-info-tab, .dark .wi, .dark .hasBoxes, .dark .pcDescription, .dark .cart-item-name,
.dark .your-cart, .dark .yc-item-name, .dark .yc-col, .dark .yc-col-learnMore, .dark .page-anchor, .dark .acc-term, .dark .health-benefit,
.dark .research-topics, .dark .topicLink, .dark .research-link a, .dark .research-link p, .dark .genericText, .dark .warranty-box, 
.dark .warranty-col, .dark .legalText, .dark .fineprint, .dark .two-cols-narrow .col, .dark .contact-col, .dark .contact-cols-text,
.dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite, h4, .dark .sgl-text,
.dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble,
  .dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input, .dark .is-empty .cart__empty-text, .dark .is-empty .cart__warnings, .dark .cart__login-paragraph a {
  color: #FFF8E7 !important;
}
.dark .stickyBG .pt-price, .dark .stickyBG .price {
  color:#000 !important;
}
.dark .stickyBG .price--on-sale .price-item--regular{
  color:#000 !important;
}

.dark .optimize:before, .dark .compatible:before {
  background: rgba(67,60,60,.55);
}

.dark .select__select,
.dark .customer select, .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number, .dark .go-cart__mini-cart, .dark .go-cart__mini-cart.js-go-cart-mini-cart.is-open::before {
  background-color: #000;
}
.dark .select__select,
.dark .customer select {
  background: #000;
}
.dark .cbb-shipping-rates-error-message {
  background-color: #000 !important;
}

.dark .cbb-shipping-rates-calculator-update-button {
  background: transparent!important;
}

.dark .cbb-shipping-rates-calculator-update-button:hover {
  box-shadow: none!important;
  text-decoration: underline!important;
  text-underline-offset: 3px;
}

.dark .cbb-shipping-rates-calculator-update-button-text {
  color: #fff!important;
}

.dark .research-links h3, .dark .what-is, .dark .story, .dark .gHjTpK.gHjTpK, .dark .compatible h2, .dark .compatible, .dark .optimize h2, 
.dark .customer, .dark .customer h1, .dark .customer a, .dark .shopify-challenge__message,	
.dark #dcodeButtonLabel, .dark input#dcodeInput,	
.dark .customer thead th, .dark .customer tbody td, .dark .customer strong, .dark .go-cart-item__title, .dark .go-cart-item__quantity-number, .dark .yc-col-head, .dark .ycc-lineitem, .dark .cbb-shipping-rates-calculator-header, 
.dark .optimize, .dark .story blockquote, .dark .etica,
.dark .intro p, .dark .intro a, .dark .people h3, .dark .people h2, .dark .people p,
.dark .self p, .dark .self a, .dark .self h3, .dark .openings a, .dark .opening p, 
.dark .opening a, .dark .opening h3, .dark .opening ul, .dark .opening li, 
.dark .opening li::marker, .dark .opening span,
.dark .customer, .dark .customer h1, .dark .customer a, .dark .shopify-challenge__message,
.dark #dcodeButtonLabel, .dark input#dcodeInput,
.dark .customer thead th, .dark .customer tbody td, .dark .customer strong, .dark .go-cart-item__title, .dark .go-cart-item__quantity-number, .dark .yc-col-head, .dark .ycc-lineitem, .dark .cbb-shipping-rates-calculator-header,
.dark .yc-col-head, .dark .ycc-lineitem, .dark .cbb-shipping-rates-calculator-header, .dark .cbb-shipping-rates-rate-item, .dark .cbb-shipping-rates-calculator-change-shipping-address, .dark .cbb-shipping-rates-calculator-country-select, .dark .cbb-shipping-rates-calculator-region-select, .dark .cbb-shipping-rates-calculator-zip-code
{
  color: #fff !important;
}

.dark .gHjTpK.gHjTpK a {
  color: #fff !important;
}

.dark .dcDiscountBox, .dark .cbb-shipping-rates-calculator-region-select  {	
  background-color: #000;	
}	

.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper {
  border-bottom: 3px solid #fff !important;
}

.dark .pot-col-100 img, .dark .shopify-section .section-confirm-subscription > img, .dark .intro img, .dark .openings img, .dark .opening img {
   filter: brightness(0) invert(1);
}		
.dark .pot-close img {
  filter: invert(95%) sepia(0%) saturate(6128%) hue-rotate(350deg) brightness(107%) contrast(100%);
}		  
        
.dark #bcpo .bcpo-images .bcpo-label label {
  background: #000;
}		 
.dark .nav-link svg, .dark .shop-all svg, .dark .nav-arrow-link svg, .dark .trial-col img,		  .dark .nav-link svg, .dark .shop-all svg, .dark .nav-arrow-link svg, .dark .trial-col img,
.dark .product-warranty, .dark .product-trial, .dark .pot-col img, .dark .nfc-close svg,
.dark .yc-financing img, .dark .col-bordered img, .dark .col-centered img, .dark .contact-col img, .dark .event-link svg,
.dark .hamb-label, .dark .wwli-head { 
  filter: brightness(0) invert(1); 
}
/* ... */

